[tool.poetry]
name = "uil-data-pipeline"
version = "0.1.0"
description = "Data Analysis Project"
authors = ["Eridani Alcantar <ealcantar@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
